# ensimag-datmo-project

./: .gitignore  CMakeLists.txt  README
cmake/: FindOpenCV.cmake
common/: tp_util.cpp  tp_util.hpp
lidar/: main.cpp
stereo/: main.cpp
tex/: report.tex
tex/pic/: plot.r  speeds.txt
